--- a/selectors.html
+++ b/selectors.html
@@ -13,20 +13,20 @@
 <body>
     <h1 id="title1" class="title">我是.title也是#title1也是h1</h1>
     <p class="text">我是緊接在.title後面的p</p>
-    <p>我是少數幾個不是.text的p</p>
-    <p class="text">我在.container外面</p>
+    <p>我是少數不是.text的p</p>
+    <p>我是少數不是.text的p</p>
+    <p class="text">我是.container外面的p</p>
     <div class="container">
-        <p class="text">我在.container裡面</p>
-        <p class="text">我在.container裡面</p>
+        <p class="text">我是.container裡面的p</p>
+        <p class="text">我是.container裡面的p</p>
         <article>
-            <p class="text">我在.container裡的article裡面</p>
-            <p class="text">我在.container裡的article裡面</p>
+            <p class="text">我是.container裡的article裡面的p</p>
+            <p class="text">我是.container裡的article裡面的p</p>
         </article>
-        <p class="text">我在.container裡面</p>
-        <p>我是少數幾個不是.text的p</p>
+        <p class="text">我是.container裡面的p</p>
     </div>
-    <p class="text">我在.container裡面</p>
-    <p class="text">我在.container裡面</p>
+    <p class="text">我是.container外面的p</p>
+    <p class="text">我是.container外面的p</p>
 </body>
 
 </html>
